Checkout on Tablet Scroll Fixed

--- a/client/employee/frontScreen/pseudoCheck.css
+++ b/client/employee/frontScreen/pseudoCheck.css
@@ -10,6 +10,7 @@
     position:absolute;
     width:100vw;
     top:0px;
+	overflow-x:hidden;
     left:0px;
   
   text-align: center;
